syntax = "proto2";

package nets.protos;

import "nets/protos/center_net.proto";
import "nets/protos/faster_rcnn.proto";
import "nets/protos/ssd.proto";

// Top level configuration for DetectionModels.
message DetectionModel {
  oneof model {
    FasterRcnn faster_rcnn = 1;
    Ssd ssd = 2;

    // This can be used to define experimental models. To define your own
    // experimental meta architecture, populate a key in the
    // model_builder.EXPERIMENTAL_META_ARCH_BUILDER_MAP dict and set its
    // value to a function that builds your model.
    ExperimentalModel experimental_model = 3;

    CenterNet center_net = 4;
  }
}

message ExperimentalModel {
  optional string name = 1;
}
